Fixed sponsorship links and tracks contrast

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -272,6 +272,7 @@ a:focus {
   font-family: var(--title-font);
   font-weight: bold;
   text-align: center;
+  text-shadow: 0px 1px 2px var(--color-shadow);
 }
 
 .logotype {
@@ -316,6 +317,7 @@ a.button {
   padding: 1rem 2rem;
   cursor: pointer;
   transition: background-color var(--transition-timing);
+  text-shadow: none;
 }
 
 a.button.small {
@@ -468,10 +470,62 @@ a.button:focus {
   font-weight: bold;
 }
 
+.flickity-button {
+  z-index: 2;
+  background-color: var(--color-foreground);
+  box-shadow: 0px 1px 4px var(--color-shadow);
+}
+
+.flickity-button-icon {
+  fill: var(--color-primary);
+}
+
 .flickity-button:focus {
   box-shadow: none;
   outline: var(--focus-outline);
 }
+
+/* Blurring viewport edges on large screens */
+.flickity-viewport:before,
+.flickity-viewport:after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 20%;
+  z-index: 1;
+  top: 0;
+  bottom: 0;
+  pointer-events: none;
+}
+
+.flickity-viewport:before {
+  left: -3px;
+  background: linear-gradient(to right, var(--color-background), transparent);
+}
+
+.flickity-viewport:after {
+  right: -3px;
+  background: linear-gradient(to left, var(--color-background), transparent);
+}
+
+@media only screen and (max-width: 568px) {
+
+  .flickity-viewport:before,
+  .flickity-viewport:after {
+    display: none;
+  }
+}
+
+.flickity-page-dots .dot {
+  background-color: #c2c3c5;
+  opacity: 1;
+}
+
+.flickity-page-dots .dot.is-selected {
+  background-color: var(--color-primary);
+}
+
+
 
 
 /* Schedule
